--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <div>
         <span>
             <p>Hello! How are you?</p>
+            <p>New Commit</p>
         </span>
     </div>
 </body>
