--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
             <p>Hello! How are you?</p>
             <p>New Commit</p>
         </span>
+        <span>
+            <p>Hello! How are you?</p>
+            <p>New Commit</p>
+        </span>
     </div>
 </body>
 
