new commit message after reset

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 
 <body>
     <div>
-
+        <span>
+            <p>Hello! How are you?</p>
+            <p>New Commit</p>
+        </span>
+        <span>
+            <p>Hello! How are you?</p>
+            <p>New Commit</p>
+        </span>
     </div>
 </body>
 
