New commit message to display

--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 
 <body>
     <div>
-        <span>
-            <p>Hello! How are you?</p>
-            <p>New Commit</p>
-        </span>
-        <span>
-            <p>Hello! How are you?</p>
-            <p>New Commit</p>
-        </span>
+        <span>Hello</span>
     </div>
 </body>
 
