--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
     <div>
         <span>Hello</span>
+        <p>Hello. This is long text</p>
+        <p>New paragraph</p>
     </div>
 </body>
 
