New span with new css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <p>Hello. This is long text</p>
         <p>New paragraph</p>
         <p>abcd Some more changes</p>
+        <span>New text message</span>
     </div>
 </body>
 
